# zhipuai-rs

./: Cargo.toml  README.md
.codebuddy/.rules/: ProjectRule.mdc
.rules/: ProjectRule.md
examples/: rtav.rs
examples/application/: retext.rs  translation.rs
examples/chat/: chat.rs  chat_codegeex.rs  chat_draw.rs  chat_function.rs  chat_image.rs  chat_play.rs  chat_stream.rs  chat_thinking_enable.rs  chat_web_search.rs  chat_zero_preview.rs  math_solve.rs
examples/images/: cogview.rs
examples/videos/: cogvideox2.rs  cogvideox3.rs
src/: error.rs  http.rs  lib.rs  prelude.rs  role.rs  values.rs
src/api_resource/: builder.rs  mod.rs  rtav.rs
src/api_resource/chat/: api.rs  data.rs  iner_macro.rs  mod.rs  model.rs  response.rs
src/api_resource/images/: api.rs  data.rs  mod.rs  model.rs  response.rs
src/api_resource/rtav/: error.rs  event.rs  value.rs
src/api_resource/videos/: api.rs  data.rs  mod.rs  model.rs  response.rs
src/bigmodel/: builder.rs  mod.rs
src/bigmodel/charGLM-4/: data.rs  iner_macro.rs  response.rs
src/bigmodel/glm_4/: iner_macro.rs  mod.rs  model.rs
