[package]
name = "zhipuai-rs"
authors = ["anlang <2682525840@qq.com>", "SmileSky <mzdk100@foxmail.com>"]
description = "zhipuai 's api of rust"
documentation = "https://docs.rs/zhipuai-rs"
repository = "https://github.com/AnlangA/zhipuai-rs.git"
license = "MIT"
version = "0.2.3"
edition = "2024"

[[example]]
name = "chat"
path = "examples/chat/chat.rs"

[[example]]
name = "chat_stream"
path = "examples/chat/chat_stream.rs"

[[example]]
name = "chat_web_search"
path = "examples/chat/chat_web_search.rs"

[[example]]
name = "chat_function"
path = "examples/chat/chat_function.rs"

[[example]]
name = "chat_image"
path = "examples/chat/chat_image.rs"

[[example]]
name = "chat_codegeex"
path = "examples/chat/chat_codegeex.rs"

[[example]]
name = "translation"
path = "examples/application/translation.rs"

[[example]]
name = "retext"
path = "examples/application/retext.rs"

[[example]]
name = "chat_draw"
path = "examples/chat/chat_draw.rs"

[[example]]
name = "chat_zero_preview"
path = "examples/chat/chat_zero_preview.rs"

[[example]]
name = "cogview"
path = "examples/images/cogview.rs"

[[example]]
name = "cogvideox2"
path = "examples/videos/cogvideox2.rs"

[[example]]
name = "math_solve"
path = "examples/chat/math_solve.rs"

[[example]]
name = "chat_play"
path = "examples/chat/chat_play.rs"

[[example]]
name = "cogvideox3"
path = "examples/videos/cogvideox3.rs"

[[example]]
name = "chat_thinking_enable"
path = "examples/chat/chat_thinking_enable.rs"

[dependencies]
base64 = "0.22.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
reqwest = { version = "0.12.24", features = ["json", "stream"] }
serde_json = "1.0.145"
futures = "0.3.31"
bytes = "1.11.0"
pin-project = "1.1.10"
async-stream = "0.3.6"
regex = "1.12.2"
log = "0.4.28"

[dev-dependencies]
rodio = "0.21.1"
anyhow = "1.0.100"
